--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,15 +20,13 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: bernard.surial@insel.ch
+phone: +41 31 632 21 11
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
-  country: United States
-  country_code: US
+  street: Freiburgstrasse 16p
+  city: Bern
+  country: Switzerland
+  country_code: CH
 coordinates:
   latitude: '37.4275'
   longitude: '-122.1697'
