--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,9 +14,9 @@ font_size: L
 
 site_type: Person
 local_business_type: ''
-org_name: ''
+org_name: 'Department of Infectious Diseases, Inselspital Bern'
 description: ''
-twitter: ''
+twitter: 'b_surial'
 
 # Contact (edit or remove options as required)
 
